--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,8 +1,34 @@
-<h1>자세한 본문 내용</h1>
-<br><br>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+</head>
 
-<h1>{{blog.title}}</h1>
-<p>{{blog.pub_date}}</p>
-<p>{{blog.body}}</p>
 
-<p><a href="{%url 'home'%}">메인으로</a></p>
+<body>
+    <!--navbar of bootstrap-->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5;">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </div>
+        </div>
+      </nav>
+
+    <!--blog detail-->
+    <div class="container">
+    <h1>자세한 본문 내용</h1>
+    <br><br>
+
+    <h1>{{blog.title}}</h1>
+    <p>{{blog.pub_date}}</p>
+    <p>{{blog.body}}</p>
+
+    <p><a href="{%url 'home'%}">메인으로</a></p>
+    </div>
+</body>
