--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -6,7 +6,7 @@
 
 <body>
     <!--navbar of bootstrap-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5;">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -14,18 +14,26 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">글쓰기</a>
             <a class="nav-item nav-link" href="#">Pricing</a>
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </div>
         </div>
       </nav>
 
-      <!--blog objects-->
+    <br>
+    <!--blog objects-->
     {%for b in blogs.all%}
-        <h1>{{b.title}}</h1>
-        <p>{{b.pub_date}}</p>
-        <p>{{b.summary}}<a href="{% url 'detail' b.id %}">...더보기</a></p>
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                <h4 class="card-title">{{b.title}}</h4>
+                <h6 class="card-subtitle mb-2 text-muted">{{b.pub_date}}</h6>
+                <p class="card-text">{{b.summary}}</p>
+                <a href="{% url 'detail' b.id %}">...더보기</a>
+                </div>
+            </div><br>
+        </div>
     {%endfor%}
 </body>
 </html>
