--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -19,21 +19,25 @@
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </div>
         </div>
-      </nav>
+    </nav>
 
     <br>
-    <!--blog objects-->
-    {%for b in blogs.all%}
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                <h4 class="card-title">{{b.title}}</h4>
-                <h6 class="card-subtitle mb-2 text-muted">{{b.pub_date}}</h6>
-                <p class="card-text">{{b.summary}}</p>
-                <a href="{% url 'detail' b.id %}">...더보기</a>
-                </div>
-            </div><br>
-        </div>
-    {%endfor%}
+    <!--writing form-->
+    <div class="container">
+        <form action="{%url 'create'%}">
+            <h4>제목</h4>
+            <input type="text" name="title">
+            <br><br>
+            <h4>본문</h4>
+            <textarea cols=40 rows=10 name="body"></textarea>
+            <br><br>
+            <input class="btn btn-dark" type="submit" value="제출하기">
+        </form>
+
+        <p><a href="{%url 'home'%}">메인으로</a></p>
+    </div>
+
+
 </body>
+
 </html>
