--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,34 +1,36 @@
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <style>
+    @font-face { font-family: 'yg-jalnan'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff'); font-weight: normal; font-style: normal; }
+    @font-face { font-family: '777Balsamtint'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/777Balsamtint.woff') format('woff'); font-weight: normal; font-style: normal; }
+    @font-face { font-family: 'netmarbleL'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleL.woff') format('woff'); font-weight: normal; font-style: normal; }
+    @font-face { font-family: 'netmarbleM'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleM.woff') format('woff'); font-weight: normal; font-style: normal; }
+  </style>
 </head>
 
 
 <body>
     <!--navbar of bootstrap-->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5;">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5; font-family: '777Balsamtint';">
+      <a class="navbar-brand" style="font-size:25px;">손시온의 블로그</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="{%url 'home'%}">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="{%url 'new'%}">글쓰기</a>
-          <a class="nav-item nav-link" href="{%url 'portfolio'%}">Portfolio</a>
-          <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-item nav-link active" href="{%url 'home'%}" style="font-size:25px;">홈 <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="{%url 'new'%}" style="font-size:25px;">글쓰기</a>
+          <a class="nav-item nav-link" href="{%url 'portfolio'%}" style="font-size:25px;">영화추천</a>
+          <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="font-size:20px;">제 블로그에 오신 걸 환영합니다. 좋은 하루 되세요 :)</a>
         </div>
       </div>
     </nav>
 
+    <br><br>
     <!--blog detail-->
     <div class="container">
-    <h1>자세한 본문 내용</h1>
-    <br><br>
-
-    <h1>{{blog.title}}</h1>
-    <p>{{blog.pub_date}}</p>
-    <p>{{blog.body}}</p>
-
-    <p><a href="{%url 'home'%}">메인으로</a></p>
+    <h1 style="font-family: 'netmarbleM';">{{blog.title}}</h1><br>
+    <p style="font-family: 'netmarbleL';">{{blog.pub_date}}</p>
+    <p style="font-family: 'netmarbleL';">{{blog.body}}</p>
     </div>
 </body>
