--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,25 +1,39 @@
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+      @font-face { font-family: 'yg-jalnan'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff'); font-weight: normal; font-style: normal; }
+      @font-face { font-family: '777Balsamtint'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/777Balsamtint.woff') format('woff'); font-weight: normal; font-style: normal; }
+      @font-face { font-family: 'netmarbleL'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleL.woff') format('woff'); font-weight: normal; font-style: normal; }
+      @font-face { font-family: 'netmarbleM'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.1/netmarbleM.woff') format('woff'); font-weight: normal; font-style: normal; }
+    </style>
 </head>
 
 
 <body>
     <!--navbar of bootstrap-->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5;">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="{%url 'home'%}">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="{%url 'new'%}">글쓰기</a>
-            <a class="nav-item nav-link" href="{%url 'portfolio'%}">Portfolio</a>
-            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5091a5; font-family: '777Balsamtint';">
+      <a class="navbar-brand" style="font-size:25px;">손시온의 블로그</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="{%url 'home'%}" style="font-size:25px;">홈 <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="{%url 'new'%}" style="font-size:25px;">글쓰기</a>
+          <a class="nav-item nav-link" href="{%url 'portfolio'%}" style="font-size:25px;">영화추천</a>
+          <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="font-size:20px;">제 블로그에 오신 걸 환영합니다. 좋은 하루 되세요 :)</a>
         </div>
-      </nav>
+      </div>
+    </nav>
+
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="jumbotron-heading" style="font-family:'yg-jalnan'; font-size:50px;">손시온의 블로그</h1><br>
+        <p class="lead text-muted" style="font-family: '777Balsamtint'; font-size:25px;">제 블로그에 오신 걸 환영합니다. 전 영화를 좋아합니다! <br>특히 옛날 영화를 좋아하시는 분은 더욱 환영합니당. 
+          <br>영화를 볼 때마다 평점을 업데이트합니다<a style="font-size:15px;">(여기말고 왓챠에서ㅎ)</a>. 제 기준이니 재미로만 봐주세요~!</p>
+      </div>
+    </section>
 
     <br>
     <!--blog objects-->
@@ -27,10 +41,10 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
-                <h4 class="card-title">{{b.title}}</h4>
-                <h6 class="card-subtitle mb-2 text-muted">{{b.pub_date}}</h6>
-                <p class="card-text">{{b.summary}}</p>
-                <a href="{% url 'detail' b.id %}">...더보기</a>
+                <h4 class="card-title" style="font-family: 'netmarbleM';">{{b.title}}</h4>
+                <p class="card-subtitle mb-2 text-muted" style="font-family: 'netmarbleL';">{{b.pub_date}}</p>
+                <p class="card-text" style="font-family: 'netmarbleL';">{{b.summary}}</p>
+                <a href="{% url 'detail' b.id %}" style="font-family: 'netmarbleL';">...더보기</a>
                 </div>
             </div><br>
         </div>
